--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
-    <link rel="stylesheet" href="css/kenburns-404.css" />
+    <link rel="stylesheet" href="css/404.css" />
 </head>
 
 <body>
@@ -24,8 +24,8 @@
             </div>
         </div>
 
-        <script src="js/common/jquery.min.js"></script>
-        <script src="js/common/bootstrap.min.js"></script>
+        <script src="dsc-js/common/jquery.min.js"></script>
+        <script src="dsc-js/common/bootstrap.min.js"></script>
     </body>
 
 </html>
