--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>404 - Ken Burns Effect</title>
+    <title>The Dental Specialists' Centre | Eldoret</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
@@ -20,7 +20,7 @@
             </div>
             <div class="link-bottom">
                 <a class="link-icon" href="http://joashpereira.com/"><i class="icon ion-ios-home"></i> HOME</a>
-                <a class="link-icon" href="mailto:name@example.com"><i class="icon ion-ios-compose"></i> WRITE TO ME</a>
+                <a class="link-icon" href="mailto:name@example.com"><i class="icon ion-ios-compose"></i> WRITE TO US</a>
             </div>
         </div>
 
