--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
+    <link rel="shortcut icon" href="images/favicon-32x32.ico"
     <link rel="stylesheet" href="css/404.css" />
 </head>
 
