--- a/404.html
+++ b/404.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>404 - Glitch</title>
+    <title>The Dental Specialists' Centre | Eldoret</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
     <link rel="stylesheet" href="css/glitch-404.css" />
+    <link rel="shortcut icon" href="images/favicon-32x32.ico"
 </head>
 
 <body>
