--- a/doctors/index.html
+++ b/doctors/index.html
@@ -398,9 +398,9 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="about.html" class="py-2 d-block">About</a></li>
-                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
-                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+                <li><a href="../about" class="py-2 d-block">About</a></li>
+                <li><a href="..blog" class="py-2 d-block">Blog</a></li>
+                <li><a href="../contact" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
           </div>
