--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - Neon - 404 Page Not Found</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="images/favicon-32x32.ico">
 
 </head>
 <body>
