--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
 
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="shortcut icon" href="images/favicon-32x32.ico"
+    <link rel="shortcut icon" href="images/favicon-32x32.ico">
 
     <link rel="stylesheet" href="css/ionicons.min.css">
 
