--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Neon - 404 Page Not Found</title>
+  <title>The Dental Specialists' Centre | Eldoret</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="images/favicon-32x32.ico">
 
@@ -38,6 +38,8 @@
 </svg>
 
 <h2>Page Not Found</h2>
+<h3><a href="./">Go Back</a></h3>
+
 <!-- partial -->
   
 </body>
