--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 </svg>
 
 <h2>Page Not Found</h2>
-<h3><a href="./">Go Back</a></h3>
+<h3><a href="./">Go Back to Homepage</a></h3>
 
 <!-- partial -->
   
