--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 }
 </style>
     
+    <link rel="stylesheet" href="./viewer/src/index.css" />
+
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
@@ -1004,6 +1007,9 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPwY67zJNt0C8_SdWb-y72rolCKeVhSO8&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
+
+  <script src="./viewer/dist/img-previewer.min.js"></script>
+
     
   </body>
 </html>
