--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   background: #555; 
 }
 </style>
+
+<script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="floating-wpp.min.js"></script>
+<link rel="stylesheet" href="floating-wpp.min.css">
+
     
     <link rel="stylesheet" href="./viewer/src/index.css" />
 
