--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,7 @@
             whatsapp: "254741962195", // WhatsApp number
             call_to_action: "Message us", // Call to action
             position: "left", // Position may be 'right' or 'left'
+            pre_filled_message: "Hello, how may we help you? ", // WhatsApp pre-filled message
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
