--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,7 @@
             call_to_action: "Message us", // Call to action
             position: "left", // Position may be 'right' or 'left'
             pre_filled_message: "Hello, how may we help you? ", // WhatsApp pre-filled message
+            greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
