--- a/404-pages/404.html
+++ b/404-pages/404.html
@@ -2,11 +2,12 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>404 - Random</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
     <link rel="stylesheet" href="css/random-404.css" />
+    <title>The Dental Specialists' Centre | Eldoret</title>
+ <link rel="shortcut icon" href="images/favicon-32x32.ico">
     <script src="js/common/modernizr.js"></script>
 </head>
 
