--- a/404-pages/404.html
+++ b/404-pages/404.html
@@ -5,10 +5,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="JoashPereira">
-    <link rel="stylesheet" href="css/random-404.css" />
+    <link rel="stylesheet" href="404css/random-404.css" />
     <title>The Dental Specialists' Centre | Eldoret</title>
  <link rel="shortcut icon" href="images/favicon-32x32.ico">
-    <script src="js/common/modernizr.js"></script>
+    <script src="404js/common/modernizr.js"></script>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
             </div>
         </div>
     </div>
-    <script src="js/common/jquery.min.js"></script>
-    <script src="js/common/bootstrap.min.js"></script>
-    <script src="js/random-404.js"></script>
+    <script src="404js/common/jquery.min.js"></script>
+    <script src="404js/common/bootstrap.min.js"></script>
+    <script src="404js/random-404.js"></script>
 </body>
 
 </html>
