--- a/404.html
+++ b/404.html
@@ -15,17 +15,7 @@
     <div class="error">
         <div class="container-fluid">
             <div class="col-xs-12 ground-color text-center centered">
-                <div class="container-error-404">
-                    <div class="clip">
-                        <div class="shadow"><span class="digit thirdDigit"></span></div>
-                    </div>
-                    <div class="clip">
-                        <div class="shadow"><span class="digit secondDigit"></span></div>
-                    </div>
-                    <div class="clip">
-                        <div class="shadow"><span class="digit firstDigit"></span></div>
-                    </div>
-                </div>
+                <a href="./"><img class="dsc-logo" src="images/dsc.gif" alt="dsceldoret" width="160" height="68"></a>
                 <h2 class="h1">Sorry! Page not found</h2>
             </div>
         </div>
