--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <div class="error">
         <div class="container-fluid">
             <div class="col-xs-12 ground-color text-center centered">
-                <a href="./"><img class="dsc-logo" src="images/dsc.gif" alt="dsceldoret" width="160" height="68"></a>
+                <a href="./"><img class="dsc-logo" src="images/giphy.gif" alt="dsceldoret" width="160" height="68"></a>
                 <h2 class="h1">Sorry! Page not found</h2>
             </div>
         </div>
