--- a/services/index.html
+++ b/services/index.html
@@ -329,7 +329,7 @@
         <div class="row mb-5">
           <div class="col-md-3">
             <div class="ftco-footer-widget mb-4">
-              <a href=""><img class="dsc-logo" src="images/dsc_logo.png" alt="dsceldoret" width="200" height="98"></a>
+              <a href="../"><img class="dsc-logo" src="images/dsc_logo.png" alt="dsceldoret" width="200" height="98"></a>
               <br>
             </div>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft ">
