btc perp btc perp

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_2.jpeg');">
+      <div class="slider-item" style="background-image: url('images/bg_2.jpg');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_4.jpeg');">
+      <div class="slider-item" style="background-image: url('images/bg_4.jpg');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_7.jpeg');">
+      <div class="slider-item" style="background-image: url('images/bg_7.jpg');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
