--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-   &copy;<script>document.write(new Date().getFullYear());</script> The Dental Specialists' Centre, Eldoret | All rights reserved
+   &copy; <script>document.write(new Date().getFullYear())</script> | The Dental Specialists' Centre, Eldoret | All rights reserved
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
