--- a/about/index.html
+++ b/about/index.html
@@ -369,7 +369,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-   &copy;<script>document.write(new Date().getFullYear());</script> The Dental Specialists' Centre, Eldoret | All rights reserved
+   &copy; <script>document.write(new Date().getFullYear())</script> | <a rel="nofollow noopener" href="https://app.weknow.studio" target="_blank">WeKnow inc</a><br>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
