--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://thedentalspecialistscentre.co.ke" />
     <meta property="og:site_name" content="The Dental Specialists' Centre | Eldoret" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="The Dental Specialists' Centre | Eldoret is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction." />
+    <meta name="twitter:description" content="The Dental Specialists' Centre is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction." />
     <style>
 /* width */
 ::-webkit-scrollbar {
@@ -98,8 +98,8 @@
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dentistry in a Calm and Relaxed Environment</h1>
-              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Ultra modern dental facility located in Eldoret.</h1>
+              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
              <!-- <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p> -->
             </div>
           </div>
@@ -111,8 +111,8 @@
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dentistry in a Calm and Relaxed Environment</h1>
-              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dental clinic in a Calm and Relaxed Environment.</h1>
+              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
               <!-- <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p> -->
             </div>
           </div>
@@ -124,8 +124,8 @@
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dentistry in a Calm and Relaxed Environment</h1>
-              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Ultra modern dental facility located in Eldoret</h1>
+              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
               <!-- <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p> -->
             </div>
           </div>
@@ -137,8 +137,8 @@
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dentistry in a Calm and Relaxed Environment</h1>
-              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Dental clinic in a Calm and Relaxed Environment.</h1>
+              <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
               <!-- <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p> -->
             </div>
           </div>
