--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
               <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern dental Clinic for Your Desired Perfect Smile</h1>
-              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p class="mb-4">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
               <!--<p><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p>-->
             </div>
           </div>
@@ -176,8 +176,8 @@
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
             <div class="col-md-6 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Achieve Your Desired Perfect Smile</h1>
-              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Modern Achieve for Your Desired Perfect Smile</h1>
+              <p class="mb-4">We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.</p>
               <!--<p><a href="contact.html" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Make an Appointment</a></p>-->
             </div>
           </div>
@@ -914,7 +914,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-   &copy; <script>document.write(new Date().getFullYear())</script> | <a rel="nofollow noopener" href="https://app.weknow.studio" target="_blank">WeKnow inc</a><br>
+   &copy; <script>document.write(new Date().getFullYear())</script> | <a rel="nofollow noopener" href="https://thedentalspecialistscentre.co.ke/" target="_blank">The Dental Specialists' Centre | Eldoret</a><br>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
