--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>The Dental Specialists' Centre | Eldoret</title>
+    <meta charset="Dental clinics in Eldoret">
+    <meta charset="We are an ultra modern dental facility located in Eldoret,off Nandi road opposite Mediheal, next to little lambs school. We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.">
     <meta name="description" content='The Dental Specialists Centre is a Dental clinic in Eldoret'>
-    <meta name="keywords" content="Eldoret, Dental, Dentist, Periodentist, Orthodontist, specialists, The Dental Specialists Centre is a Dental clinic in Eldoret, SEO, search engine optimization">
+    <meta name="keywords" content="Eldoret, Dental, Dentist, Periodentist, Orthodontist, specialists, The Dental Specialists Centre is a Dental clinic in Eldoret">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="canonical" href="https://thedentalspecialistscentre.co.ke" />
