--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
         var options = {
             whatsapp: "254748434345", // WhatsApp number
             call_to_action: "Message us", // Call to action
-            position: "left", // Position may be 'right' or 'left'
+            position: "right", // Position may be 'right' or 'left'
             pre_filled_message: "Hello, how may we help you? ", // WhatsApp pre-filled message
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
