--- a/contact/index.html
+++ b/contact/index.html
@@ -164,7 +164,7 @@
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
                 <li><a href="../about" class="py-2 d-block">About</a></li>
-                <li><a href="..blog" class="py-2 d-block">Blog</a></li>
+                <li><a href="../blog" class="py-2 d-block">Blog</a></li>
                 <li><a href="../contact" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
