--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 	          <li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="/doctors" class="nav-link">Doctors</a></li>
 	          <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
 	          <li class="nav-item cta"><a href="" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Book an Appointment</span></a></li>
 	        </ul>
