--- a/contact/index.html
+++ b/contact/index.html
@@ -74,6 +74,7 @@
             <li class="nav-item"><a href="../services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="../doctors" class="nav-link">Doctors</a></li>
             <li class="nav-item"><a href="../blog" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="../gallery" class="nav-link">Gallery</a></li>
             <li class="nav-item"><a href="../contact" class="nav-link">Contact</a></li>
             <li class="nav-item cta"><a href="" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Book an Appointment</span></a></li>
           </ul>
@@ -83,7 +84,7 @@
     <!-- END nav -->
 
     <section class="home-slider owl-carousel">
-      <div class="slider-item bread-item" style="background-image: url('images/bg_10.jpg');" data-stellar-background-ratio="0.5">
+      <div class="slider-item bread-item" style="background-image: url('images/pexels-shvets-production-7191994.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container" data-scrollax-parent="true">
           <div class="row slider-text align-items-end">
