--- a/contact/index.html
+++ b/contact/index.html
@@ -121,15 +121,18 @@
           <div class="col-md-6 pr-md-5">
             <form name="contact-form" action="https://formspree.io/f/xgerrezn" method="post">
               <div class="form-group">
+                <label for="appointment_name" class="text-black">Full Name</label>
                 <input type="text" name="Name" id="full-name" class="form-control" placeholder="Your Name" required="">
               </div>
               <div class="form-group">
+                <label for="appointment_name" class="text-black">Email</label>
                 <input type="text" name="Email" class="form-control" placeholder="Your Email" required="">
               </div>
-              <div class="form-group">
+             <!--  <div class="form-group">
                 <input type="text" name="Subject" class="form-control" placeholder="Subject" required="">
-              </div>
+              </div> -->
               <div class="form-group">
+                <label for="appointment_name" class="text-black">Message</label>
                 <textarea name="Message" id="" cols="30" rows="7" class="form-control" placeholder="Message Here" required=""></textarea>
               </div>
               <div class="form-group">
