--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	          <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Book an Appointment</span></a></li>
+	          <li class="nav-item cta"><a href="https://api.whatsapp.com/send?phone=254748434345&text=Welcome%20to%20The%20Dental%20Specialists'%20Centre.%20If%20you%20need%20any%20assistance,%20reply%20to%20this%20message.%20We%20are%20online%20and%20ready%20to%20help!" target="_blank" rel="noopener noreferrer" class="nav-link"><span>Schedule An Appointment</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -1012,7 +1012,7 @@
             whatsapp: "254748434345", // WhatsApp number
             call_to_action: "Message us", // Call to action
             position: "right", // Position may be 'right' or 'left'
-            pre_filled_message: "Hello, how may we help you? ", // WhatsApp pre-filled message
+            pre_filled_message: "Welcome to The Dental Specialists' Centre. If you need any assistance, reply to this message. We are online and ready to help!", // WhatsApp pre-filled message
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
