--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
             <div class="col-xs-12 ground-color text-center centered">
                 <a href="./"><img class="dsc-logo" src="images/giphy.gif" alt="dsceldoret" width="240" height="240"></a>
                 <h2 class="h1">Sorry! Page not found</h2>
-                <h1>Click/Tap the logo to go back</h1>
+                <h1>Click/Tap on the logo to go back</h1>
             </div>
         </div>
     </div>
