--- a/index.html
+++ b/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
   <head>
     <title>The Dental Specialists' Centre | Eldoret</title>
-    <meta charset="Dental clinics in Eldoret">
-    <meta charset="We are an ultra modern dental facility located in Eldoret,off Nandi road opposite Mediheal, next to little lambs school. We offer quality of specialized dental care services to our patients using contemporary equipment materials and techniques.">
-    <meta name="description" content='The Dental Specialists Centre is a Dental clinic in Eldoret'>
-    <meta name="keywords" content="Eldoret, Dental, Dentist, Periodentist, Orthodontist, specialists, The Dental Specialists Centre is a Dental clinic in Eldoret">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="canonical" href="https://thedentalspecialistscentre.co.ke" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Dental Specialists' Centre | Eldoret" />
-    <meta property="og:description" content="The Dental Specialists' Centre | Eldoret is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction." />
-    <meta property="og:url" content="https://thedentalspecialistscentre.co.ke" />
-    <meta property="og:site_name" content="The Dental Specialists' Centre | Eldoret" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="The Dental Specialists' Centre is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction." />
+    <meta charset="UTF-8">
+<meta name="description" content="The Dental Specialists' Centre | Eldoret is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction.", >
+<meta name="keywords" content="The Dental Specialists' Centre, Specialists', Eldoret, Orthodontist, Periodontic, Dentist">
+<meta name="author" content="The Dental Specialists' Centre">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:url" content="https://thedentalspecialistscentre.co.ke"/>
+<meta property="og:site_name" content="Dental Clinic in Eldoret"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="The Dental Specialists' Centre | Eldoret">
+<link rel="canonical" href="https://thedentalspecialistscentre.co.ke"/>
     <style>
 /* width */
 ::-webkit-scrollbar {
