--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
   <head>
     <title>The Dental Specialists' Centre | Eldoret</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+<meta name="description" content="The Dental Specialists' Centre | Eldoret is a dental in Eldoret with specialists of different technical skill, ethical values and compassionate manner. We are one of best dental clinics in Eldoret putting strong emphasis on complete patient happiness and satisfaction.", >
+<meta name="keywords" content="The Dental Specialists' Centre, Specialists', Eldoret, Orthodontist, Periodontic, Dentist">
+<meta name="author" content="The Dental Specialists' Centre">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:url" content="https://thedentalspecialistscentre.co.ke"/>
+<meta property="og:site_name" content="Dental Clinic in Eldoret"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="The Dental Specialists' Centre | Eldoret">
+<link rel="canonical" href="https://thedentalspecialistscentre.co.ke"/>
 
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
