--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
             whatsapp: "254748434345", // WhatsApp number
             call_to_action: "Message us", // Call to action
             position: "right", // Position may be 'right' or 'left'
-            pre_filled_message: "Welcome to The Dental Specialists' Centre. If you need any assistance, reply to this message. We are online and ready to help!", // WhatsApp pre-filled message
+            pre_filled_message: "Hello The Dental Specialists' Centre.", // WhatsApp pre-filled message
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
