--- a/contact/index.html
+++ b/contact/index.html
@@ -84,7 +84,7 @@
             <li class="nav-item"><a href="../blog" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="../gallery" class="nav-link">Gallery</a></li>
             <li class="nav-item"><a href="../contact" class="nav-link">Contact</a></li>
-            <li class="nav-item cta"><a href="https://api.whatsapp.com/send?phone=254748434345&text=Welcome%20to%20The%20Dental%20Specialists'%20Centre.%20If%20you%20need%20any%20assistance,%20reply%20to%20this%20message.%20We%20are%20online%20and%20ready%20to%20help!" target="_blank" rel="noopener noreferrer" class="nav-link"><span>Schedule An Appointment</span></a></li>
+            <li class="nav-item cta"><a href="https://api.whatsapp.com/send/?phone=254748434345&text=Hello%21+The+Dental+Specialists%27+Centre.&app_absent=0" target="_blank" rel="noopener noreferrer" class="nav-link"><span>Schedule An Appointment</span></a></li>
           </ul>
         </div>
       </div>
