--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	          <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
             <li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="https://api.whatsapp.com/send?phone=254748434345&text=Welcome%20to%20The%20Dental%20Specialists'%20Centre.%20If%20you%20need%20any%20assistance,%20reply%20to%20this%20message.%20We%20are%20online%20and%20ready%20to%20help!" target="_blank" rel="noopener noreferrer" class="nav-link"><span>Schedule An Appointment</span></a></li>
+	          <li class="nav-item cta"><a href="https://api.whatsapp.com/send/?phone=254748434345&text=Hello%21+The+Dental+Specialists%27+Centre.&app_absent=0" target="_blank" rel="noopener noreferrer" class="nav-link"><span>Schedule An Appointment</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -1000,23 +1000,23 @@
   <script src="./viewer/dist/img-previewer.min.js"></script>
 
 
-  <!-- GetButton.io widget -->
+  <!-- widget -->
 <script type="text/javascript">
     (function () {
         var options = {
             whatsapp: "254748434345", // WhatsApp number
-            call_to_action: "Message us", // Call to action
-            position: "right", // Position may be 'right' or 'left'
-            pre_filled_message: "Hello The Dental Specialists' Centre.", // WhatsApp pre-filled message
+            call_to_action: "Send Us A Message", // Call to action
+            position: "left", // Position may be 'right' or 'left'
+            pre_filled_message: "Hello! The Dental Specialists' Centre.", // WhatsApp pre-filled message
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
-        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        var proto = document.location.protocol, host = "mikeowino.live", url = proto + "//dsc." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/init.js';
         s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
     })();
 </script>
-<!-- /GetButton.io widget -->
+<!-- widget -->
 
 
   </body>
