--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
             pre_filled_message: "Hello! The Dental Specialists' Centre.", // WhatsApp pre-filled message
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
-        var proto = document.location.protocol, host = "mikeowino.live", url = proto + "//dsc." + host;
+        var proto = document.location.protocol, host = "thedentalspecialistscentre.co.ke", url = proto + "//app." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/init.js';
         s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
