--- a/index.html
+++ b/index.html
@@ -1004,10 +1004,10 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "254748434345", // WhatsApp number
-            call_to_action: "Send Us A Message", // Call to action
-            position: "left", // Position may be 'right' or 'left'
-            pre_filled_message: "Hello! The Dental Specialists' Centre.", // WhatsApp pre-filled message
+            whatsapp: "254748434345",
+            call_to_action: "Send Us A Message",
+            position: "left",
+            pre_filled_message: "Hello! The Dental Specialists' Centre.",
             greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
         };
         var proto = document.location.protocol, host = "thedentalspecialistscentre.co.ke", url = proto + "//app." + host;
@@ -1017,7 +1017,6 @@
     })();
 </script>
 <!-- widget -->
-
 
   </body>
 </html>
