--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,10 @@
     (function () {
         var options = {
             whatsapp: "254748434345",
+            call: "254748434345",
+            facebook: "101533432059140",
+            button_color: "#e5782e",
+            order: "call,whatsapp,facebook",
             call_to_action: "Send Us A Message",
             position: "left",
             pre_filled_message: "Hello! The Dental Specialists' Centre.",
