--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
     (function () {
         var options = {
             whatsapp: "254748434345",
-            call: "254748434345",
+            call: "+254 748 434 345",
             facebook: "101533432059140",
             button_color: "#e5782e",
             order: "call,whatsapp,facebook",
