--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
             whatsapp: "254748434345",
             call: "+254 748 434 345",
             facebook: "101533432059140",
-            button_color: "#e5782e",
+            button_color: "#2d8940",
             order: "call,whatsapp,facebook",
             call_to_action: "Send Us A Message",
             position: "left",
