--- a/doctors/index.html
+++ b/doctors/index.html
@@ -12,27 +12,27 @@
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="The Dental Specialists' Centre | Eldoret">
 <link rel="canonical" href="https://thedentalspecialistscentre.co.ke"/>
-    <style>
-/* width */
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555; 
-}
-</style>
+<style>
+	/* width */
+	::-webkit-scrollbar {
+	  width: 5px;
+	}
+	
+	/* Track */
+	::-webkit-scrollbar-track {
+	  background: #f1f1f1; 
+	}
+	 
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+	  background: #e5782e; 
+	}
+	
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+	  background: #2473ac; 
+	}
+	</style>
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700" rel="stylesheet">
 
