--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       	<div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-2">Our Service Keeps you Smile</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p>Ultra modern dental clinic located in Eldoret, off Nandi road opposite Mediheal next to Little Lambs School</p>
           </div>
         </div>
         <div class="row">
@@ -273,8 +273,7 @@
       		<div class="col-md-6 d-flex">
       			<div class="about-wrap">
       				<div class="heading-section heading-section-white mb-5 ftco-animate">
-		            <h2 class="mb-2">Dentalcare with a personal touch</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <h2 class="mb-2">Dental care with a personal touch</h2>
 		          </div>
       				<div class="list-services d-flex ftco-animate">
       					<div class="icon d-flex justify-content-center align-items-center">
@@ -282,7 +281,7 @@
       					</div>
       					<div class="text">
 	      					<h3>Well Experience Specialists'</h3>
-	      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	      					<p>Be served with our qualified Specialists'</p>
       					</div>
       				</div>
       				<div class="list-services d-flex ftco-animate">
@@ -291,7 +290,7 @@
       					</div>
       					<div class="text">
 	      					<h3>High Technology Facilities</h3>
-	      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	      					<p>We have the best and modern dental technology facilities.</p>
       					</div>
       				</div>
       				<div class="list-services d-flex ftco-animate">
@@ -300,7 +299,7 @@
       					</div>
       					<div class="text">
 	      					<h3>Comfortable Clinic</h3>
-	      					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	      					<p>Experience the best hospitality in our clinic.</p>
       					</div>
       				</div>
       			</div>
