--- a/contact.html
+++ b/contact.html
@@ -280,5 +280,26 @@
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
+  <!-- widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "254748434345",
+            call: "+254 748 434 345",
+            facebook: "101533432059140",
+            button_color: "#2d8940",
+            order: "call,whatsapp,facebook",
+            call_to_action: "Send Us A Message",
+            position: "left",
+            pre_filled_message: "Hello! The Dental Specialists' Centre.",
+            greeting_message: "Hello, how may we help you? Just send us a message now to get assistance.",
+        };
+        var proto = document.location.protocol, host = "thedentalspecialistscentre.co.ke", url = proto + "//cdn." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- widget -->
   </body>
 </html>
