--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
       </div> -->
 
-      <div class="slider-item" style="background-image: url('images/bg_4.jpg');">
+      <div class="slider-item" style="background-image: url('images/bg_4.avif');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_5.jpg');">
+      <div class="slider-item" style="background-image: url('images/bg_5.avif');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image: url('images/bg_6.jpg');">
+      <div class="slider-item" style="background-image: url('images/bg_6.avif');">
         <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text align-items-center" data-scrollax-parent="true">
@@ -268,7 +268,7 @@
       </div>
       <div class="container-wrap mt-5">
       	<div class="row d-flex no-gutters">
-      		<div class="col-md-6 img" style="background-image: url(images/about-2.jpg);">
+      		<div class="col-md-6 img" style="background-image: url(images/about-2.avif);">
       		</div>
       		<div class="col-md-6 d-flex">
       			<div class="about-wrap">
