--- a/index.html
+++ b/index.html
@@ -909,10 +909,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-   &copy; <script>document.write(new Date().getFullYear())</script> | <a rel="nofollow noopener" href="https://thedentalspecialistscentre.co.ke/" target="_blank">The Dental Specialists' Centre | Eldoret</a><br>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p> &copy; <span id="copyright-year"></span> <script> document.querySelector('#copyright-year').innerText = new Date().getFullYear(); </script> | <a href="https://thedentalspecialistscentre.co.ke/" rel="nofollow noopener" target="_blank">The Dental Specialists' Centre | Eldoret</a></p>
           </div>
         </div>
       </div>
