--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
         </div>
         <div class="row block-9">
           <div class="col-md-6 pr-md-5">
-            <form name="contact-form" action="https://formspree.io/f/xgerrezn" method="post">
+            <form name="contact-form" data-netlify="true" method="post">
               <div class="form-group">
                 <label for="appointment_name" class="text-black">Full Name</label>
                 <input type="text" name="Name" id="full-name" class="form-control" placeholder="Your Name" required="">
