--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPwY67zJNt0C8_SdWb-y72rolCKeVhSO8&sensor=false"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPwY67zJNt0C8_SdWb-y72rolCKeVhSO8&sensor=false"></script> -->
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
 
-  <script src="./viewer/dist/img-previewer.min.js"></script>
+  <!-- <script src="./viewer/dist/img-previewer.min.js"></script> -->
 
 
   <!-- widget -->
